<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"


    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title1"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="90dp"
        android:fontFamily="@font/ibm_bold"
        android:text="@string/vamos_comecar"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_intro"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/slider1" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_marginTop="20dp"

        android:fontFamily="@font/ibm_bold"
        android:text="@string/titulo_slider1"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_marginTop="10dp"
        android:layout_margin="20dp"
        android:fontFamily="@font/ibm_regular"
        android:text="@string/descricao1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>